feat: add fast fall 2025

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Get On My Level: Forever • July 04 - July 06 • Toronto, ON • 775 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Supernova 2025 • August 07 - August 10 • Chantilly, VA • TBD attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -24,142 +24,6 @@
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
     <div class="card-container">
-<div
-  class="card"
-  data-start-time="1751637600"
-  data-end-time="1751860500"
->
-  <img
-    src="assets/cards/getOnMyLevelForeverCanadianFightingGameChampionships.webp"
-    alt="Get On My Level: Forever banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Get On My Level: Forever</h2>
-    <h4>July 04 - July 06</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>aMSa</li>
-        <li>Wizzrobe</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Hungrybox</li>
-        <li>Aklo</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=123%20Queen%20St%20W%2C%20Toronto%2C%20ON%20M5H%203M9%2C%20Canada"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Toronto, ON"
-      >
-        Toronto, ON </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 775
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/get-on-my-level-forever-canadian-fighting-game-championships/event/super-smash-bros-melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Get On My Level: Forever"
-        >Bracket</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/3279617/image-fc23d5cfa3203de0d9da023df9d8f692.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Get On My Level: Forever"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Get On My Level: Forever"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1752930000"
-  data-end-time="1752984000"
->
-  <img
-    src="assets/cards/unranked.webp"
-    alt="Unranked banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Unranked</h2>
-    <h4>July 19 - July 19</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Schlag</li>
-        <li>Easy</li>
-        <li>Majersk</li>
-        <li>Ikana</li>
-        <li>Fluid</li>
-        <li>regEx</li>
-        <li>HOBORG</li>
-        <li>Seal</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=25%20S%20Halsted%20St%2C%20Chicago%2C%20IL%2060661%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Chicago, IL"
-      >
-        Chicago, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 130
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/unranked/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Unranked"
-        >Bracket</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/2286808/image-4cce23cfa7e6029b37862b6bd3f79180-optimized.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Unranked"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Unranked"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
 <div
   class="card"
   data-start-time="1754578800"
@@ -244,14 +108,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Wizzrobe</li>
+        <li>KoDoRiN</li>
+        <li>Jmook</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
+        <li>lloD</li>
       </ul>
     </div>
     <hr />
@@ -264,7 +128,7 @@
         data-umami-event-location="Secaucus, NJ"
       >
         Secaucus, NJ </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 333
     </p>
     <hr />
     <div class="buttons">
@@ -312,12 +176,12 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
+        <li>MOF</li>
+        <li>Drephen</li>
+        <li>TBD</li>
+        <li>TBD</li>
         <li>Sirmeris</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
         <li>Free Palestine</li>
-        <li>TBD</li>
         <li>TBD</li>
         <li>TBD</li>
       </ul>
@@ -332,7 +196,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 176
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 222
     </p>
     <hr />
     <div class="buttons">
@@ -358,6 +222,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Riptide 2025"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1762617600"
+  data-end-time="1762750740"
+>
+  <img
+    src="assets/cards/fastFall2025.webp"
+    alt="FAST FALL$ 2025 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>FAST FALL$ 2025</h2>
+    <h4>November 08 - November 09</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Zain</li>
+        <li>Moky</li>
+        <li>Nicki</li>
+        <li>Junebug</li>
+        <li>Cody Schwab</li>
+        <li>Aklo</li>
+        <li>Wizzrobe</li>
+        <li>Magi</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=310%204th%20St%2C%20Niagara%20Falls%2C%20NY%2014303%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Niagara Falls, NY"
+      >
+        Niagara Falls, NY </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 28
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/fast-fall-2025/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="FAST FALL$ 2025"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="FAST FALL$ 2025"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="FAST FALL$ 2025"
         >Stream</a
       >
     </div>
