feat: add quebecup 2025

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Supernova 2025 • August 07 - August 10 • Chantilly, VA • TBD attendees"
+      content="The Largest Upcoming Melee Events | Next major: Supernova 2025 • August 07 - August 10 • Chantilly, VA • 2259 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -40,14 +40,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Leffen</li>
+        <li>Wizzrobe</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
       </ul>
     </div>
     <hr />
@@ -60,7 +60,7 @@
         data-umami-event-location="Chantilly, VA"
       >
         Chantilly, VA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 2259
     </p>
     <hr />
     <div class="buttons">
@@ -128,7 +128,7 @@
         data-umami-event-location="Secaucus, NJ"
       >
         Secaucus, NJ </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 333
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 338
     </p>
     <hr />
     <div class="buttons">
@@ -196,7 +196,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 222
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 238
     </p>
     <hr />
     <div class="buttons">
@@ -222,6 +222,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Riptide 2025"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1759590000"
+  data-end-time="1759633200"
+>
+  <img
+    src="assets/cards/quBecup2025.webp"
+    alt="Québecup 2025 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Québecup 2025</h2>
+    <h4>October 04 - October 04</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Salt</li>
+        <li>Faust</li>
+        <li>Lunar Dusk</li>
+        <li>Hungrybox</li>
+        <li>Zamu</li>
+        <li>MOF</li>
+        <li>Kalvar</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=5000%20R.%20Sherbrooke%20E%2C%20Montr%C3%A9al%2C%20QC%20H1V%201A1%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Montréal, QC"
+      >
+        Montréal, QC </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 121
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/qu-becup-2025/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Québecup 2025"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Québecup 2025"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Québecup 2025"
         >Stream</a
       >
     </div>
@@ -264,7 +332,7 @@
         data-umami-event-location="Niagara Falls, NY"
       >
         Niagara Falls, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 28
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 34
     </p>
     <hr />
     <div class="buttons">
