feat: add supernova schedule + top 8 time

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Supernova 2025 • August 07 - August 10 • Chantilly, VA • 2259 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Supernova 2025 • August 07 - August 10 • Chantilly, VA • 2422 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -60,7 +60,7 @@
         data-umami-event-location="Chantilly, VA"
       >
         Chantilly, VA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 2259
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 2422
     </p>
     <hr />
     <div class="buttons">
@@ -73,9 +73,9 @@
         >Bracket</a
       >
       <a
-        href=""
+        href="https://supernova.gg/schedule"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Supernova 2025"
         >Schedule</a
@@ -128,7 +128,7 @@
         data-umami-event-location="Secaucus, NJ"
       >
         Secaucus, NJ </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 338
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 366
     </p>
     <hr />
     <div class="buttons">
@@ -176,14 +176,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
+        <li>Skerzo</li>
+        <li>Sirmeris</li>
+        <li>Grab</li>
+        <li>Dawson</li>
         <li>MOF</li>
         <li>Drephen</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>Sirmeris</li>
         <li>Free Palestine</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Chango</li>
       </ul>
     </div>
     <hr />
@@ -196,7 +196,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 238
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 306
     </p>
     <hr />
     <div class="buttons">
@@ -264,7 +264,7 @@
         data-umami-event-location="Montréal, QC"
       >
         Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 121
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 125
     </p>
     <hr />
     <div class="buttons">
@@ -332,7 +332,7 @@
         data-umami-event-location="Niagara Falls, NY"
       >
         Niagara Falls, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 34
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 43
     </p>
     <hr />
     <div class="buttons">
