fix: update website

--- a/site/index.html
+++ b/site/index.html
@@ -111,11 +111,11 @@
         <li>Zain</li>
         <li>moky</li>
         <li>Wizzrobe</li>
-        <li>KoDoRiN</li>
+        <li>lloD</li>
         <li>Jmook</li>
         <li>Hungrybox</li>
         <li>Aklo</li>
-        <li>lloD</li>
+        <li>Trif</li>
       </ul>
     </div>
     <hr />
@@ -128,7 +128,7 @@
         data-umami-event-location="Secaucus, NJ"
       >
         Secaucus, NJ </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 366
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 407
     </p>
     <hr />
     <div class="buttons">
@@ -176,14 +176,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Skerzo</li>
-        <li>Sirmeris</li>
-        <li>Grab</li>
-        <li>Dawson</li>
-        <li>MOF</li>
-        <li>Drephen</li>
-        <li>Free Palestine</li>
-        <li>Chango</li>
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
+        <li>Zain</li>
+        <li>Leffen</li>
+        <li>Wizzrobe</li>
+        <li>Morsecode762</li>
       </ul>
     </div>
     <hr />
@@ -196,7 +196,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 306
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 489
     </p>
     <hr />
     <div class="buttons">
@@ -245,10 +245,10 @@
       <u>Featured Players</u>
       <ul class="featured-players-columns">
         <li>Cody Schwab</li>
-        <li>Salt</li>
+        <li>Hungrybox</li>
         <li>Faust</li>
         <li>Lunar Dusk</li>
-        <li>Hungrybox</li>
+        <li>Zain</li>
         <li>Zamu</li>
         <li>MOF</li>
         <li>Kalvar</li>
@@ -264,7 +264,7 @@
         data-umami-event-location="Montréal, QC"
       >
         Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 125
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 155
     </p>
     <hr />
     <div class="buttons">
@@ -332,7 +332,7 @@
         data-umami-event-location="Niagara Falls, NY"
       >
         Niagara Falls, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 43
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 49
     </p>
     <hr />
     <div class="buttons">
