fix: allow favicon in robots.txt
also update riptide schedule, top 8 reminder, and stream link

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Supernova 2025 • August 07 - August 10 • Chantilly, VA • 2422 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Riptide 2025 • September 05 - September 07 • Sandusky, OH • 489 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -24,142 +24,6 @@
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
     <div class="card-container">
-<div
-  class="card"
-  data-start-time="1754578800"
-  data-end-time="1754872200"
->
-  <img
-    src="assets/cards/supernova2025.webp"
-    alt="Supernova 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Supernova 2025</h2>
-    <h4>August 07 - August 10</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>Leffen</li>
-        <li>Wizzrobe</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Hungrybox</li>
-        <li>Aklo</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Chantilly, VA"
-      >
-        Chantilly, VA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 2422
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/supernova-2025/event/melee-1v1-singles-free-to-enter-wr-merch-included"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Supernova 2025"
-        >Bracket</a
-      >
-      <a
-        href="https://supernova.gg/schedule"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Supernova 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Supernova 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1755864000"
-  data-end-time="1756090800"
->
-  <img
-    src="assets/cards/collision20258.webp"
-    alt="Collision 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Collision 2025</h2>
-    <h4>August 22 - August 24</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Wizzrobe</li>
-        <li>lloD</li>
-        <li>Jmook</li>
-        <li>Hungrybox</li>
-        <li>Aklo</li>
-        <li>Trif</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=355%20Plaza%20Dr%2C%20Secaucus%2C%20NJ%2007094%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Secaucus, NJ"
-      >
-        Secaucus, NJ </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 407
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/collision-2025-8/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Collision 2025"
-        >Bracket</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Collision 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Collision 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
 <div
   class="card"
   data-start-time="1757077200"
@@ -209,17 +73,17 @@
         >Bracket</a
       >
       <a
-        href=""
+        href="https://i.imgur.com/gHsE3L7.jpeg"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Riptide 2025"
         >Schedule</a
       >
       <a
-        href=""
+        href="https://www.twitch.tv/btssmash"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="stream-clicked"
         data-umami-event-name="Riptide 2025"
         >Stream</a
@@ -264,7 +128,7 @@
         data-umami-event-location="Montréal, QC"
       >
         Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 155
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 158
     </p>
     <hr />
     <div class="buttons">
