feat: add Luminosity Makes Moves Miami 2025

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Riptide 2025 • September 05 - September 07 • Sandusky, OH • 489 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Québecup 2025 • October 04 - October 04 • Montréal, QC • 160 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -24,74 +24,6 @@
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
     <div class="card-container">
-<div
-  class="card"
-  data-start-time="1757077200"
-  data-end-time="1757300400"
->
-  <img
-    src="assets/cards/riptide20254.webp"
-    alt="Riptide 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Riptide 2025</h2>
-    <h4>September 05 - September 07</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>Hungrybox</li>
-        <li>Aklo</li>
-        <li>Zain</li>
-        <li>Leffen</li>
-        <li>Wizzrobe</li>
-        <li>Morsecode762</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=7000%20Kalahari%20Dr%2C%20Sandusky%2C%20OH%2044870%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Sandusky, OH"
-      >
-        Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 489
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/riptide-2025-4/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Riptide 2025"
-        >Bracket</a
-      >
-      <a
-        href="https://i.imgur.com/gHsE3L7.jpeg"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Riptide 2025"
-        >Schedule</a
-      >
-      <a
-        href="https://www.twitch.tv/btssmash"
-        target="_blank"
-        class="card-button"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Riptide 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
 <div
   class="card"
   data-start-time="1759590000"
@@ -128,7 +60,7 @@
         data-umami-event-location="Montréal, QC"
       >
         Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 158
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 160
     </p>
     <hr />
     <div class="buttons">
@@ -141,9 +73,9 @@
         >Bracket</a
       >
       <a
-        href=""
+        href="https://imgur.com/eWLXO3x"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Québecup 2025"
         >Schedule</a
@@ -176,14 +108,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Zain</li>
-        <li>Moky</li>
-        <li>Nicki</li>
-        <li>Junebug</li>
         <li>Cody Schwab</li>
+        <li>moky</li>
         <li>Aklo</li>
+        <li>Junebug</li>
+        <li>Zain</li>
         <li>Wizzrobe</li>
         <li>Magi</li>
+        <li>MOF</li>
       </ul>
     </div>
     <hr />
@@ -196,7 +128,7 @@
         data-umami-event-location="Niagara Falls, NY"
       >
         Niagara Falls, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 49
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 50
     </p>
     <hr />
     <div class="buttons">
@@ -222,6 +154,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="FAST FALL$ 2025"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1760108400"
+  data-end-time="1760327880"
+>
+  <img
+    src="assets/cards/luminosityMakesMovesMiami20251.webp"
+    alt="Luminosity Makes Moves Miami 2025 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Luminosity Makes Moves Miami 2025</h2>
+    <h4>October 10 - October 12</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=16701%20Collins%20Ave%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Sunny Isles Beach, FL"
+      >
+        Sunny Isles Beach, FL </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/luminosity-makes-moves-miami-2025-1/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2025"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2025"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2025"
         >Stream</a
       >
     </div>
