chore: add kill roy 9 and update CONTRIBUTING.md with new tournaments.json value overrides

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Québecup 2025 • October 04 - October 04 • Montréal, QC • 160 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Québecup 2025 • October 04 - October 04 • Montréal, QC • 163 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -60,7 +60,7 @@
         data-umami-event-location="Montréal, QC"
       >
         Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 160
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 163
     </p>
     <hr />
     <div class="buttons">
@@ -86,6 +86,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Québecup 2025"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1760187600"
+  data-end-time="1760241540"
+>
+  <img
+    src="assets/cards/killRoyVolume9.webp"
+    alt="Kill Roy: Volume 9 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Kill Roy: Volume 9</h2>
+    <h4>October 11 - October 11</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Drephan</li>
+        <li>Medz</li>
+        <li>Blue</li>
+        <li>Schlag</li>
+        <li>Grab</li>
+        <li>Syrox</li>
+        <li>coffee</li>
+        <li>Holiday</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=150%20N%20Rose%20Ave%2C%20Bloomington%2C%20IN%2047406%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Bloomington, IN"
+      >
+        Bloomington, IN </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 65
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/kill-roy-volume-9/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Kill Roy: Volume 9"
+        >Bracket</a
+      >
+      <a
+        href="https://www.start.gg/tournament/kill-roy-volume-9/details"
+        target="_blank"
+        class="card-button"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Kill Roy: Volume 9"
+        >Schedule</a
+      >
+      <a
+        href="https://www.twitch.tv/btssmash"
+        target="_blank"
+        class="card-button"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Kill Roy: Volume 9"
         >Stream</a
       >
     </div>
