fix: fix type in Drephen's name for Kill Roy 9

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Québecup 2025 • October 04 - October 04 • Montréal, QC • 163 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Québecup 2025 • October 04 - October 04 • Montréal, QC • 169 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -60,7 +60,7 @@
         data-umami-event-location="Montréal, QC"
       >
         Montréal, QC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 163
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 169
     </p>
     <hr />
     <div class="buttons">
@@ -108,7 +108,7 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Drephan</li>
+        <li>Drephen</li>
         <li>Medz</li>
         <li>Blue</li>
         <li>Schlag</li>
@@ -128,7 +128,7 @@
         data-umami-event-location="Bloomington, IN"
       >
         Bloomington, IN </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 65
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 72
     </p>
     <hr />
     <div class="buttons">
